src/integration/snapshots/rustclean__integration__screens__search-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (on disk)  │  17 files  │  sort: size
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
    Size        Share               Files      Modified         Name
▶       3.6 GiB █████         41.2%          4 2026-09-29 12:00 Downloads/
        3.2 GiB ████▍         36.7%          2 2026-09-21 12:00 Movies/
        1.1 GiB █▌            12.8%          5 2026-09-28 12:00 Projects/
      665.0 MiB ▉              7.5%          2 2026-09-30 12:00 Library/
      150.0 MiB ▎              1.7%          1 2026-09-21 12:00 Applications/
        4.0 MiB                0.0%          3 2026-09-30 12:00 Documents/


















────────────────────────────────────────────────────────────────────────────────────────────────────
 Find:  *.dmg█   e.g. test · test* · *.log
 Enter  find   Esc  cancel
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+16 -/DarkGray BOLD | 16+12 Cyan/DarkGray BOLD | 28+8 -/DarkGray BOLD | 36+10 Gray/DarkGray BOLD | 46+1 -/DarkGray BOLD | 47+16 Green/DarkGray BOLD | 63+1 -/DarkGray BOLD | 64+10 LightBlue/DarkGray BOLD | 74+26 -/DarkGray BOLD
 4: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+7 LightBlue/- BOLD
 5: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+9 LightBlue/- BOLD
 6: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+8 LightBlue/- BOLD
 7: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+13 LightBlue/- BOLD
 8: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+10 LightBlue/- BOLD
28: 0+7 Black/Yellow BOLD | 13+1 -/- SLOW_BLINK | 14+28 Gray/-
29: 0+7 Black/Gray | 14+5 Black/Gray
