src/integration/snapshots/rustclean__integration__screens__system-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Sistem verileri
┌ APFS kapsayıcısı (disk3) ────────────────────────────────────────────────────────────────────────┐
│Toplam 994.0 GiB  ·  kullanılan 724.0 GiB  ·  boş 270.0 GiB   ███████████████████████▎         %73│
│                                                                                                  │
│Macintosh HD - Data       Veri (uygulamalar ve dosyalarınız)      640.0 GiB  ████████████▉        │
│Macintosh HD              Sistem (salt okunur macOS)               11.0 GiB  ▎                    │
│Preboot                   Önyükleme                                 7.0 GiB  ▏                    │
│VM                        Sanal bellek (takas)                      4.0 GiB  ▏                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Taramanın göremediği ──────────────────────────┐┌ Anlık görüntüler ve bellek ────────────────────┐
│Bu karşılaştırma için diskin kökünü (/) tarayın:││Time Machine anlık görüntüsü  1 adet            │
│d → Macintosh HD                                ││  com.apple.TimeMachine.2026-10-01-110000.local │
│                                                ││  silmek için: sudo tmutil deletelocalsnapshots │
│                                                ││Takas (swap)                  1.0 GiB / 4.0 GiB │
│                                                ││Uyku görüntüsü (sleepimage)   1.0 GiB           │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌ Diğer ───────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Bu ekran yalnızca bilgi verir; hiçbir şeyi değiştirmez.
 r  yenile   m  menü   Esc  geri   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 0+1 DarkGray/- | 1+26 White/- BOLD | 27+73 DarkGray/-
 2: 0+1 DarkGray/- | 63+32 Green/- | 95+4 -/- BOLD | 99+1 DarkGray/-
 3: 0+1 DarkGray/- | 99+1 DarkGray/-
 4: 0+1 DarkGray/- | 1+26 White/- BOLD | 27+38 Gray/- | 78+20 Cyan/- | 99+1 DarkGray/-
 5: 0+1 DarkGray/- | 1+26 White/- BOLD | 27+38 Gray/- | 78+20 Cyan/- | 99+1 DarkGray/-
 6: 0+1 DarkGray/- | 1+26 White/- BOLD | 27+38 Gray/- | 78+20 Cyan/- | 99+1 DarkGray/-
 7: 0+1 DarkGray/- | 1+26 White/- BOLD | 27+38 Gray/- | 78+20 Cyan/- | 99+1 DarkGray/-
 8: 0+100 DarkGray/-
 9: 0+1 DarkGray/- | 1+22 White/- BOLD | 23+28 DarkGray/- | 51+28 White/- BOLD | 79+21 DarkGray/-
10: 0+1 DarkGray/- | 49+2 DarkGray/- | 51+30 White/- | 81+6 -/- BOLD | 99+1 DarkGray/-
11: 0+1 DarkGray/- | 1+16 Cyan/- | 49+2 DarkGray/- | 51+47 Gray/- | 99+1 DarkGray/-
12: 0+1 DarkGray/- | 49+2 DarkGray/- | 51+48 Cyan/- | 99+1 DarkGray/-
13: 0+1 DarkGray/- | 49+2 DarkGray/- | 51+30 White/- | 81+17 -/- BOLD | 99+1 DarkGray/-
14: 0+1 DarkGray/- | 49+2 DarkGray/- | 51+30 White/- | 81+7 -/- BOLD | 99+1 DarkGray/-
15: 0+1 DarkGray/- | 49+2 DarkGray/- | 99+1 DarkGray/-
16: 0+1 DarkGray/- | 49+2 DarkGray/- | 99+1 DarkGray/-
17: 0+100 DarkGray/-
18: 0+1 DarkGray/- | 1+7 White/- BOLD | 8+92 DarkGray/-
19: 0+1 DarkGray/- | 99+1 DarkGray/-
20: 0+1 DarkGray/- | 99+1 DarkGray/-
21: 0+1 DarkGray/- | 99+1 DarkGray/-
22: 0+1 DarkGray/- | 99+1 DarkGray/-
23: 0+1 DarkGray/- | 99+1 DarkGray/-
24: 0+1 DarkGray/- | 99+1 DarkGray/-
25: 0+1 DarkGray/- | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 99+1 DarkGray/-
27: 0+100 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+3 Black/Gray | 22+5 Black/Gray | 34+3 Black/Gray
