src/integration/snapshots/rustclean__integration__screens__theme-browser-colorblind-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (on disk)  │  17 files  │  sort: size
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
    Size        Share               Files      Modified         Name
▶       3.6 GiB █████         41.2%          4 2026-09-29 12:00 Downloads/
        3.2 GiB ████▍         36.7%          2 2026-09-21 12:00 Movies/
        1.1 GiB █▌            12.8%          5 2026-09-28 12:00 Projects/
      665.0 MiB ▉              7.5%          2 2026-09-30 12:00 Library/
      150.0 MiB ▎              1.7%          1 2026-09-21 12:00 Applications/
        4.0 MiB                0.0%          3 2026-09-30 12:00 Documents/


















────────────────────────────────────────────────────────────────────────────────────────────────────
37 items scanned, 1.2 s   ⚠ 2 items inaccessible
 ↑↓  move   Enter  open   ⌫  back   t  map   /  find   m  reports   i  summary   s  sort   a  appare
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Indexed(74) BOLD
 1: 36+7 White/- BOLD | 43+2 Indexed(33)/- | 45+12 White/- | 57+2 Indexed(117)/- | 59+13 White/- | 72+2 Indexed(227)/- | 74+12 White/- | 86+2 Indexed(202)/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(117)/- | 64+7 Indexed(117)/- BOLD
 5: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(33)/- | 64+9 Indexed(117)/- BOLD
 6: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(33)/- | 64+8 Indexed(117)/- BOLD
 7: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(117)/- | 64+13 Indexed(117)/- BOLD
 8: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(33)/- | 64+10 Indexed(117)/- BOLD
28: 0+23 Gray/- | 23+25 Indexed(214)/-
29: 0+4 Black/Gray | 11+7 Black/Gray | 25+3 Black/Gray | 35+3 Black/Gray | 44+3 Black/Gray | 54+3 Black/Gray | 67+3 Black/Gray | 80+3 Black/Gray | 90+3 Black/Gray
