src/integration/snapshots/rustclean__integration__screens__theme-browser-colorblind-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (diskte)  │  17 dosya  │  sıralama: boyut
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
    Boyut       Oran                Dosya      Son değişiklik   Ad
▶       3.6 GiB █████         %41.2          4 29.09.2026 12:00 Downloads/
        3.2 GiB ████▍         %36.7          2 21.09.2026 12:00 Movies/
        1.1 GiB █▌            %12.8          5 28.09.2026 12:00 Projects/
      665.0 MiB ▉              %7.5          2 30.09.2026 12:00 Library/
      150.0 MiB ▎              %1.7          1 21.09.2026 12:00 Applications/
        4.0 MiB                %0.0          3 30.09.2026 12:00 Documents/


















────────────────────────────────────────────────────────────────────────────────────────────────────
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ?  yardım   ↑↓  gez   Enter  gir   ⌫  geri   t  harita   /  ara   m  raporlar   i  özet   s  sırala
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Indexed(74) BOLD
 1: 39+8 White/- BOLD | 47+2 Indexed(33)/- | 49+11 White/- | 60+2 Indexed(117)/- | 62+12 White/- | 74+2 Indexed(227)/- | 76+11 White/- | 87+2 Indexed(202)/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(117)/- | 64+7 Indexed(117)/- BOLD
 5: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(33)/- | 64+9 Indexed(117)/- BOLD
 6: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(33)/- | 64+8 Indexed(117)/- BOLD
 7: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(117)/- | 64+13 Indexed(117)/- BOLD
 8: 16+12 Indexed(74)/- | 36+10 Gray/- | 47+16 Indexed(33)/- | 64+10 Indexed(117)/- BOLD
28: 0+22 Gray/- | 22+24 Indexed(214)/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 35+3 Black/Gray | 45+3 Black/Gray | 57+3 Black/Gray | 66+3 Black/Gray | 80+3 Black/Gray | 90+3 Black/Gray
