src/integration/snapshots/rustclean__integration__screens__theme-browser-light-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (diskte)  │  17 dosya  │  sıralama: boyut
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
    Boyut       Oran                Dosya      Son değişiklik   Ad
▶       3.6 GiB █████         %41.2          4 29.09.2026 12:00 Downloads/
        3.2 GiB ████▍         %36.7          2 21.09.2026 12:00 Movies/
        1.1 GiB █▌            %12.8          5 28.09.2026 12:00 Projects/
      665.0 MiB ▉              %7.5          2 30.09.2026 12:00 Library/
      150.0 MiB ▎              %1.7          1 21.09.2026 12:00 Applications/
        4.0 MiB                %0.0          3 30.09.2026 12:00 Documents/


















────────────────────────────────────────────────────────────────────────────────────────────────────
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ↑↓  gez   Enter  gir   ⌫  geri   t  harita   /  ara   m  raporlar   i  özet   s  sırala   a  görüne
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Indexed(231)/Indexed(25) BOLD
 1: 39+8 -/- BOLD | 47+2 Indexed(28)/- | 60+2 Indexed(31)/- | 74+2 Indexed(130)/- | 87+2 Indexed(160)/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+16 -/Indexed(253) BOLD | 16+12 Indexed(25)/Indexed(253) BOLD | 28+8 -/Indexed(253) BOLD | 36+10 Indexed(242)/Indexed(253) BOLD | 46+1 -/Indexed(253) BOLD | 47+16 Indexed(28)/Indexed(253) BOLD | 63+1 -/Indexed(253) BOLD | 64+10 Indexed(26)/Indexed(253) BOLD | 74+26 -/Indexed(253) BOLD
 4: 16+12 Indexed(25)/- | 36+10 Indexed(242)/- | 47+16 Indexed(31)/- | 64+7 Indexed(26)/- BOLD
 5: 16+12 Indexed(25)/- | 36+10 Indexed(242)/- | 47+16 Indexed(28)/- | 64+9 Indexed(26)/- BOLD
 6: 16+12 Indexed(25)/- | 36+10 Indexed(242)/- | 47+16 Indexed(28)/- | 64+8 Indexed(26)/- BOLD
 7: 16+12 Indexed(25)/- | 36+10 Indexed(242)/- | 47+16 Indexed(31)/- | 64+13 Indexed(26)/- BOLD
 8: 16+12 Indexed(25)/- | 36+10 Indexed(242)/- | 47+16 Indexed(28)/- | 64+10 Indexed(26)/- BOLD
28: 0+22 Indexed(242)/- | 22+24 Indexed(130)/-
29: 0+4 Indexed(231)/Indexed(242) | 10+7 Indexed(231)/Indexed(242) | 23+3 Indexed(231)/Indexed(242) | 33+3 Indexed(231)/Indexed(242) | 45+3 Indexed(231)/Indexed(242) | 54+3 Indexed(231)/Indexed(242) | 68+3 Indexed(231)/Indexed(242) | 78+3 Indexed(231)/Indexed(242) | 90+3 Indexed(231)/Indexed(242)
