src/integration/snapshots/rustclean__integration__screens__theme-dashboard-colorblind-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Summary — /Users/demo  │  on disk
┌ General ───────────────────────────────────────┐┌ Disk ──────────────────────────────────────────┐
│Total size     8.6 GiB                          ││No disk information.                            │
│Contents       17 files · 19 folders            ││                                                │
│Latest change  2026-09-30 12:00                 ││                                                │
│⚠ 2 items were inaccessible during the scan     ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌ File types ────────────────────────────────────┐┌ Age (last modified) ───────────────────────────┐
│Archives / disk images ██▌       3.6 GiB   41%  ││≤ 7 days   █▉                  923.0 MiB   10%  │
│Video                  ██▎       3.2 GiB   37%  ││≤ 30 days  ▍                   175.0 MiB    2%  │
│Other                  █▏        1.6 GiB   18%  ││≤ 1 year   ████▊                 2.3 GiB   26%  │
│Code                   ▎       310.0 MiB    4%  ││> 1 year   ███████████           5.3 GiB   61%  │
│Documents                        7.0 MiB    0%  ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌ Largest files ─────────────────────────────────┐┌ Fullest folders (direct contents) ─────────────┐
│▶    3.0 GiB 2025-08-27 12:00 Downloads/Xcode_16││   3.6 GiB Downloads/                           │
│     2.3 GiB 2025-02-28 12:00 Movies/holiday-202││   3.2 GiB Movies/                              │
│   900.0 MiB 2026-08-22 12:00 Movies/screen-reco││ 820.0 MiB Projects/api/target/debug/           │
│   820.0 MiB 2026-06-03 12:00 Projects/api/targe││ 610.0 MiB Library/Caches/com.example.browser/  │
│   610.0 MiB 2026-09-30 12:00 Library/Caches/com││ 310.0 MiB Projects/web/node_modules/react/     │
│   450.0 MiB 2026-03-15 12:00 Downloads/setup.dm││ 150.0 MiB Applications/Sketchpad.app/Contents/M│
│   310.0 MiB 2026-09-28 12:00 Projects/web/node_││  55.0 MiB Library/Application Support/com.examp│
│   150.0 MiB 2026-08-02 12:00 Applications/Sketc││   4.0 MiB Documents/                           │
│   120.0 MiB 2026-09-19 12:00 Downloads/photos.z││   8.0 KiB Projects/web/                        │
│    55.0 MiB 2026-09-11 12:00 Library/Applicatio││   4.0 KiB Projects/api/                        │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
“Fullest folders” ignores subfolders: it shows where the space actually sits.
 ?  help   Tab  switch list   ↑↓  move   Enter  go to location   Space  to basket   x  move to trash
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Indexed(74) BOLD
 1: 0+1 DarkGray/- | 1+9 White/- BOLD | 10+41 DarkGray/- | 51+6 White/- BOLD | 57+43 DarkGray/-
 2: 0+1 DarkGray/- | 1+15 White/- | 16+7 -/- BOLD | 49+2 DarkGray/- | 51+20 Gray/- | 99+1 DarkGray/-
 3: 0+1 DarkGray/- | 1+15 White/- | 49+2 DarkGray/- | 99+1 DarkGray/-
 4: 0+1 DarkGray/- | 1+15 White/- | 16+16 Indexed(33)/- | 49+2 DarkGray/- | 99+1 DarkGray/-
 5: 0+1 DarkGray/- | 1+43 Indexed(214)/- | 49+2 DarkGray/- | 99+1 DarkGray/-
 6: 0+100 DarkGray/-
 7: 0+1 DarkGray/- | 1+12 White/- BOLD | 13+38 DarkGray/- | 51+21 White/- BOLD | 72+28 DarkGray/-
 8: 0+1 DarkGray/- | 1+23 White/- | 24+6 Indexed(227)/- | 41+6 Gray/- | 49+2 DarkGray/- | 51+11 White/- | 62+18 Indexed(33)/- | 91+6 Gray/- | 99+1 DarkGray/-
 9: 0+1 DarkGray/- | 1+23 White/- | 24+6 Indexed(175)/- | 41+6 Gray/- | 49+2 DarkGray/- | 51+11 White/- | 62+18 Indexed(117)/- | 91+6 Gray/- | 99+1 DarkGray/-
10: 0+1 DarkGray/- | 1+23 White/- | 24+6 Gray/- | 41+6 Gray/- | 49+2 DarkGray/- | 51+11 White/- | 62+18 Indexed(227)/- | 91+6 Gray/- | 99+1 DarkGray/-
11: 0+1 DarkGray/- | 1+23 White/- | 24+6 Indexed(33)/- | 41+6 Gray/- | 49+2 DarkGray/- | 51+11 White/- | 62+18 Indexed(202)/- | 91+6 Gray/- | 99+1 DarkGray/-
12: 0+1 DarkGray/- | 1+23 White/- | 24+6 Indexed(36)/- | 41+6 Gray/- | 49+2 DarkGray/- | 99+1 DarkGray/-
13: 0+100 DarkGray/-
14: 0+1 Indexed(74)/- | 1+15 White/- BOLD | 16+34 Indexed(74)/- | 50+1 DarkGray/- | 51+35 White/- BOLD | 86+14 DarkGray/-
15: 0+1 Indexed(74)/- | 1+48 White/Indexed(238) BOLD | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+10 Indexed(117)/- BOLD | 99+1 DarkGray/-
16: 0+1 Indexed(74)/- | 14+16 Indexed(202)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+7 Indexed(117)/- BOLD | 99+1 DarkGray/-
17: 0+1 Indexed(74)/- | 14+16 Indexed(227)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+26 Indexed(117)/- BOLD | 99+1 DarkGray/-
18: 0+1 Indexed(74)/- | 14+16 Indexed(227)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+35 Indexed(117)/- BOLD | 99+1 DarkGray/-
19: 0+1 Indexed(74)/- | 14+16 Indexed(33)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+32 Indexed(117)/- BOLD | 99+1 DarkGray/-
20: 0+1 Indexed(74)/- | 14+16 Indexed(227)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+37 Indexed(117)/- BOLD | 99+1 DarkGray/-
21: 0+1 Indexed(74)/- | 14+16 Indexed(33)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+37 Indexed(117)/- BOLD | 99+1 DarkGray/-
22: 0+1 Indexed(74)/- | 14+16 Indexed(227)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+10 Indexed(117)/- BOLD | 99+1 DarkGray/-
23: 0+1 Indexed(74)/- | 14+16 Indexed(117)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+13 Indexed(117)/- BOLD | 99+1 DarkGray/-
24: 0+1 Indexed(74)/- | 14+16 Indexed(117)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 62+13 Indexed(117)/- BOLD | 99+1 DarkGray/-
25: 0+1 Indexed(74)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 99+1 DarkGray/-
26: 0+1 Indexed(74)/- | 49+1 Indexed(74)/- | 50+1 DarkGray/- | 99+1 DarkGray/-
27: 0+50 Indexed(74)/- | 50+50 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+5 Black/Gray | 29+4 Black/Gray | 40+7 Black/Gray | 64+7 Black/Gray | 83+3 Black/Gray
